--- a/serverless.yml
+++ b/serverless.yml
@@ -32,6 +32,7 @@ custom:
         - table: usersTable
           rawsources: [./fake-test-users.json]
   serverless-offline:
+    host: 0.0.0.0
     port: 4000
     region: "ap-southeast-2"
 
