--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "serverless": "^1.27.3"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "request": "^2.87.0",
     "serverless-dynamodb-client": "0.0.2",
     "serverless-dynamodb-local": "^0.2.30",
     "serverless-offline": "^3.25.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "install": "docker pull lambci/lambda",
     "setup": "./node_modules/.bin/sls config credentials --provider aws --key KEY --secret SECRET",
     "start": "./node_modules/.bin/sls offline start -r us-east-1 --noTimeout",
