--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "handler.js",
   "dependencies": {
+    "aws-sdk": "^2.263.1",
     "serverless": "^1.27.3"
   },
   "devDependencies": {
@@ -12,7 +13,8 @@
     "request": "^2.87.0",
     "serverless-dynamodb-client": "0.0.2",
     "serverless-dynamodb-local": "^0.2.30",
-    "serverless-offline": "^3.25.4"
+    "serverless-offline": "^3.25.4",
+    "should": "^13.2.1"
   },
   "scripts": {
     "test": "mocha",
