--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
 
 functions:
   hello:
-    handler: src/handler.hello
+    handler: src/api-gw/handler.hello
     events:
       - http:
           path: /hello
