--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "handler.js",
   "dependencies": {
     "aws-sdk": "^2.263.1",
-    "serverless": "^1.27.3"
+    "serverless": "^1.27.3",
+    "serverless-offline": "^3.25.4"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -13,7 +14,6 @@
     "request": "^2.87.0",
     "serverless-dynamodb-client": "0.0.2",
     "serverless-dynamodb-local": "^0.2.30",
-    "serverless-offline": "^3.25.4",
     "should": "^13.2.1"
   },
   "scripts": {
